fix:criado interface para os dtos e corrigido metodos do address.